[package]
name = "rest-app"
version = "1.0.0"
description = "Modern Zen - 强制休息提醒应用"
authors = ["you"]
edition = "2021"

[lib]
name = "rest_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
